fix: statistics overflow on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 a {
